--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,16 @@ services:
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - DB_NAME=devdb
+      - DB_USER=postgres
+      - DB_PASS=postgres
     depends_on:
       - db
-  
+
   db:
     image: postgres:13-alpine
     volumes:
-      - dev-db-data:var/lib/postgresql/data
+      - dev-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=postgres
@@ -31,3 +31,4 @@ services:
     
 volumes:
   dev-db-data:
+  
